--- a/app/src/main/res/layout/welcome_activity.xml
+++ b/app/src/main/res/layout/welcome_activity.xml
@@ -8,10 +8,17 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context=".MainActivity">
-
-    <TextView
-            android:text="MainActivity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        tools:context="com.jjklogano.zufengfm.WelcomeActivity">
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="WelconeActivity"
+                />
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="跳过"
+                android:onClick="btnJumpMain"
+                />
 </RelativeLayout>
