--- a/app/src/main/res/layout/discover_fragment.xml
+++ b/app/src/main/res/layout/discover_fragment.xml
@@ -1,13 +1,40 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.jjklogano.zufengfm.Fragments.DiscoverFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+              android:orientation="vertical"
+             tools:context="com.jjklogano.zufengfm.fragments.DiscoverFragment">
+    <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            >
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/title_logo"
+                />
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/search_unpress"
+                android:layout_alignParentRight="true"
+                />
+    </RelativeLayout>
+    <!-- 使用android5.0新增design包进行兼容-->
 
-</FrameLayout>
+    <android.support.design.widget.TabLayout
+            android:id="@+id/discover_tab_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+    </android.support.design.widget.TabLayout>
+    <android.support.v4.view.ViewPager
+            android:id="@+id/discover_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+
+</LinearLayout>
