--- a/app/src/main/res/layout/discover_fragment.xml
+++ b/app/src/main/res/layout/discover_fragment.xml
@@ -1,9 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
-             tools:context="com.jjklogano.zufengfm.fragments.DiscoverFragment">
+              tools:context="com.jjklogano.zufengfm.fragments.DiscoverFragment"
+        >
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -28,6 +30,10 @@
             android:id="@+id/discover_tab_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:tabMode="scrollable"
+            app:tabIndicatorColor="#fc5832"
+            app:tabSelectedTextColor="#fc5832"
+            app:tabIndicatorHeight="3dp"
             >
     </android.support.design.widget.TabLayout>
     <android.support.v4.view.ViewPager
