--- a/app/src/main/res/layout/discover_recommend_fragment.xml
+++ b/app/src/main/res/layout/discover_recommend_fragment.xml
@@ -1,13 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+          android:id="@+id/discover_recommend_list"
              tools:context="com.jjklogano.zufengfm.fragments.discover.DiscoverRecommendFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
-
-</FrameLayout>
+</ListView>
