finishi Recommned`s list data load and show.Need to add add pager switcher then...

--- a/app/src/main/res/layout/discover_recommend_fragment.xml
+++ b/app/src/main/res/layout/discover_recommend_fragment.xml
@@ -2,6 +2,8 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+          android:divider="#ceee"
+          android:dividerHeight="10dp"
           android:id="@+id/discover_recommend_list"
              tools:context="com.jjklogano.zufengfm.fragments.discover.DiscoverRecommendFragment">
 
