--- a/app/src/main/res/layout/discover_recommend_discover_item.xml
+++ b/app/src/main/res/layout/discover_recommend_discover_item.xml
@@ -20,8 +20,8 @@
         >
         <ImageView
                 android:id="@+id/discover_recommend_discover_item_icon_0"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="@dimen/discover_recommend_discover_item_width"
+                android:layout_height="@dimen/discover_recommend_discover_item_height"
                 android:layout_marginRight="8dp"
                 android:src="@mipmap/album_cover_bg"
                 />
@@ -56,8 +56,8 @@
             >
         <ImageView
                 android:id="@+id/discover_recommend_discover_item_icon_1"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="@dimen/discover_recommend_discover_item_width"
+                android:layout_height="@dimen/discover_recommend_discover_item_height"
                 android:layout_marginRight="8dp"
                 android:src="@mipmap/album_cover_bg"
                 />
@@ -92,8 +92,8 @@
             >
         <ImageView
                 android:id="@+id/discover_recommend_discover_item_icon_2"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="@dimen/discover_recommend_discover_item_width"
+                android:layout_height="@dimen/discover_recommend_discover_item_height"
                 android:layout_marginRight="8dp"
                 android:src="@mipmap/album_cover_bg"
                 />
@@ -128,8 +128,8 @@
             >
         <ImageView
                 android:id="@+id/discover_recommend_discover_item_icon_3"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="@dimen/discover_recommend_discover_item_width"
+                android:layout_height="@dimen/discover_recommend_discover_item_height"
                 android:layout_marginRight="8dp"
                 android:src="@mipmap/album_cover_bg"
                 />
