--- a/app/src/main/res/layout/discover_category_fragment.xml
+++ b/app/src/main/res/layout/discover_category_fragment.xml
@@ -1,13 +1,27 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.jjklogano.zufengfm.fragments.discover.DiscoverCategoryFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
-
-</FrameLayout>
+            android:orientation="vertical"
+            >
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="sdasdasdsadasdasdadsdssad"
+            />
+    <com.jjklogano.zufengfm.widgets.FullListView
+            android:id="@+id/lvv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="sdasdasdsadasdasdadsdssad"
+            />
+    </LinearLayout>
+</ScrollView>
