--- a/app/src/main/res/layout/album_detail_activity.xml
+++ b/app/src/main/res/layout/album_detail_activity.xml
@@ -132,4 +132,21 @@
                     />
         </android.support.v4.widget.NestedScrollView>
     </android.support.v4.widget.SwipeRefreshLayout>
+    <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fabSize = "mini"
+            app:layout_anchor="@id/album_detail_refresh"
+            app:elevation="8dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginBottom="8dp"
+            app:layout_anchorGravity="bottom|end|right"
+            />
+    <CheckBox
+            android:id="@+id/album_detail_play_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:button="@drawable/play_button_selector"
+            android:layout_gravity = "bottom|center"
+            />
 </android.support.design.widget.CoordinatorLayout>
