--- a/app/src/main/res/layout/discover_category_fragment.xml
+++ b/app/src/main/res/layout/discover_category_fragment.xml
@@ -1,27 +1,13 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.jjklogano.zufengfm.fragments.discover.DiscoverCategoryFragment">
-    <LinearLayout
+    <ListView
+            android:id="@+id/discover_category_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="sdasdasdsadasdasdadsdssad"
+            android:divider="#ceee"
+            android:dividerHeight="@dimen/discover_recommend_list_divider_height"
             />
-    <com.jjklogano.zufengfm.widgets.FullListView
-            android:id="@+id/lvv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="sdasdasdsadasdasdadsdssad"
-            />
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
